# boc-uxp

./: .gitignore  .gitmodules  .update-sources.py  .update-xref.py  README.md  client.mk  client.py  mach  sourcestamp.txt
mail/: Makefile.in  app.mozbuild  build.mk  configure.in  confvars.sh  moz.build
mail/app/: Makefile.in  application.ini  module.ver  moz.build  nsMailApp.cpp  splash.rc  thunderbird.exe.manifest
mail/app/blocklist/: addons.inc.xml  blocklist.xml  certificates.inc.xml
mail/app/macbuild/Contents/: Info.plist.in  MacOS-files.in
mail/app/profile/: all-thunderbird.js  application.js  moz.build
mail/base/: jar.mn  moz.build
mail/base/content/: aboutDialog.js  aboutDialog.xul  baseMenuOverlay.xul  contentAreaClick.js  extensionsOverlay.xul  folderDisplay.js  folderPane.js  mail3PaneWindowCommands.js  mailCore.js  mailWindow.js  mailWindowOverlay.js  mailWindowOverlay.xul  messageWindow.js  messageWindow.xul  messenger.xul  msgHdrViewOverlay.js  msgHdrViewOverlay.xul  msgMail3PaneWindow.js  specialTabs.js  utilityOverlay.js  utilityOverlay.xul
mail/branding/official/: application-branding.js  license.txt  thunderbird.icns
mail/branding/unofficial/: application-branding.js  branding.nsi
mail/branding/unstable/: application-branding.js  branding.nsi  configure.sh  disk.icns  moz.build  thunderbird-branding.js
mail/branding/unstable/content/: aboutDialog.css
mail/components/: aboutRedirector.js  mailComponents.manifest  moz.build  nsAboutRedirector.js
mail/components/addrbook/content/: addressbook.js  addressbook.xul
mail/components/cloudfile/: nsBox.js
mail/components/compose/content/: MsgComposeCommands.js  messengercompose.xul
mail/components/im/themes/: chat.css
mail/components/preferences/: advanced.js  advanced.xul  display.xul  general.js  general.xul  preferences.xul  security.xul
mail/components/search/: nsMailWinSearchHelper.h
mail/components/steel/: steelApplication.js
mail/config/: version.txt
mail/config/mozconfigs/linux32/: nightly
mail/config/mozconfigs/linux64/: nightly
mail/config/mozconfigs/macosx-universal/: nightly
mail/config/mozconfigs/win32/: nightly
mail/extensions/encryptedmail/: chrome.manifest  install.rdf
mail/extensions/smime/: jar.mn
mail/installer/: Makefile.in  package-manifest.in
mail/installer/windows/: Makefile.in
mail/locales/: Makefile.in  jar.mn
mail/modules/: mailMigrator.js  moz.build
mail/test/mozmill/: runtest.py
mail/themes/: moz.build
mail/themes/ClassicTB2/: jar.mn  moz.build
mail/themes/classic/: install.rdf  jar.mn  moz.build
mail/themes/classic/linux/: jar.mn
mail/themes/classic2/: install.rdf  jar.mn  moz.build
mail/themes/windows/: jar.mn
mail/themes/xplatform/: install.rdf  jar.mn  moz.build
(+732 files in other folders)
