dnl -*- Mode: Autoconf; tab-width: 2; indent-tabs-mode: nil; -*-
dnl vi: set tabstop=2 shiftwidth=2 expandtab:
dnl This Source Code Form is subject to the terms of the Mozilla Public
dnl License, v. 2.0. If a copy of the MPL was not distributed with this
dnl file, You can obtain one at http://mozilla.org/MPL/2.0/.

dnl =========================================================
dnl Things we need to carry from confvars.sh
dnl =========================================================

dnl Application defines
AC_SUBST(MOZ_THUNDERBIRD)
AC_DEFINE(MOZ_THUNDERBIRD)

AC_SUBST(BINOC_INTERLINK)
AC_DEFINE(BINOC_INTERLINK)

AC_SUBST(MOZ_BUNDLED_FONTS)
AC_DEFINE(MOZ_SEPARATE_MANIFEST_FOR_THEME_OVERRIDES)

AC_SUBST(MOZ_MAILNEWS)
AC_SUBST(MOZ_COMPOSER)

AC_SUBST(MOZ_LDAP_XPCOM)
AC_DEFINE(MOZ_LDAP_XPCOM)

SEAMONKEY_VERSION=2.49
AC_SUBST(SEAMONKEY_VERSION)
AC_SUBST(THUNDERBIRD_VERSION)

dnl =========================================================
dnl = Mork
dnl =========================================================
AC_SUBST(MOZ_MORK)
if test "$MOZ_MORK"; then
  AC_DEFINE(MOZ_MORK)
fi

dnl =========================================================
dnl = movemail
dnl =========================================================
if test "$OS_ARCH" != "WINNT"; then
  MOZ_MOVEMAIL=1
  HAVE_MOVEMAIL=1
  AC_DEFINE(HAVE_MOVEMAIL)
fi
AC_SUBST(MOZ_MOVEMAIL)


dnl =========================================================
dnl = Lightning extension
dnl =========================================================
MOZ_ARG_ENABLE_BOOL(calendar,
[  --enable-calendar      Enable building of the Lightning calendar extension],
    MOZ_CALENDAR=1,
    MOZ_CALENDAR= )

if test -n "$MOZ_CALENDAR"; then
    MOZ_MAIL_LEGACY=1
    AC_SUBST(MOZ_MAIL_LEGACY)
fi

AC_SUBST(MOZ_CALENDAR)

dnl =========================================================
dnl = Don't fold *comps into libXUL
dnl =========================================================
MOZ_ARG_ENABLE_BOOL(incomplete-external-linkage,
[  --enable-incomplete-external-linkage Don't fold *comps into libXUL which is currently badly busted so don't even bother with it ],
    MOZ_INCOMPLETE_EXTERNAL_LINKAGE=1,
    MOZ_INCOMPLETE_EXTERNAL_LINKAGE= )

AC_SUBST(MOZ_INCOMPLETE_EXTERNAL_LINKAGE)

dnl =========================================================
dnl = MAPI support (Windows only)
dnl =========================================================

if test "$_WIN32_MSVC"; then
    MOZ_MAPI_SUPPORT=1
fi

MOZ_ARG_DISABLE_BOOL(mapi,
[  --disable-mapi          Disable MAPI support],
    MOZ_MAPI_SUPPORT= )

AC_SUBST(MOZ_MAPI_SUPPORT)

if test -n "$MOZ_MAPI_SUPPORT"; then
    AC_DEFINE(MOZ_MAPI_SUPPORT)
fi
